add media query and flexbox

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="/assets/logo.png" />
-    </div>    
+  <header>      
     <div class="main">
+      <div class="logo">
+        <img src="/assets/logo.png" />
+      </div>  
       <ul>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
@@ -27,5 +27,12 @@
       <a href="#" class="btn">LEARN MORE</a>
     </div>
   </header>
+  <main>
+    <div class="flex-container">
+      <div class="flex-item">Section 1</div>
+      <div class="flex-item">Section 2</div>
+      <div class="flex-item">Section 3</div>
+    </div>
+  </main>
 </body>
 </html>
